delete order add priority
